 # [#23392] Use Article settings missing from some menu items. Thanks Bill.
 #$ [#23416] Adding descriptions in the images modal
 # [#23413] Module Article categories. Thanks Mark
 # [#23303] Newfeed layouts should show unpublished feeds if logged in. Thanks Mark.
 
20-Nov-2010 Mark Dexter
 # [#23380] Category manager allows deleting a category that has items assigned to it

20-Nov-2010 Christophe Demko
 # [#23355] Access level special now manager and above (Elin Waring)
 # [#23342] Front end editing not working in some layouts (bill richardson)
 # [#21638] maximum upload size inconsistency (Ian MacLennan, Rouven Weßling, bill richardson)
 # Fix a small issue in templatestyle field

19-Nov-2010 Mark Dexter
# Remove duplicate article in sample data

19-Nov-2010 Christophe Demko
 ^ Fix Check for request forgeries
 # [#23397] return false; on config tabs throwing javascript error (Al Kent)
 # [#23370] *Modal Non-flash Uploader does not work
 # [#23359] com_contact template produces invalid markup (Rouven Weßling)

19-Nov-2010 Jean-Marie Simonet
 # [#23367] The secure parameter in menu item is not used. Thanks Christophe.
 # [#23304] List Weblinks in a Category doesn't show unpublished weblinks for logged in users. Thanks Mark.
 # [#22525] Mod_menu menu image no span with link-title anymore. Thanks Angie.
 $ Deleting libraries strings from lang installation as the library is now loaded there.
 $ Modifying a string value.
 # [#23408] Keep UI consistent for default home page in multilingual site. Thanks Christophe.
 # [#23388] mod_menu. Thanks James, Bill, Rouven

18-Nov-2010 Jean-Marie Simonet
$ Adding missing strings

18-Nov-2010 Andrew Eddie
 ! Added SQL diff for beta 14 to 'next version'.

17-Nov-2010 Mark Dexter
 # [#22484] JFolder::files() does not pass exclude parameters when recursing
 # Follow up on [#23360] to include two image files

17-Nov-2010 Christophe Demko
 # [#23197] onUserBeforeSave needs to be able cancel the creation of an account (Andrew Eddie)