@@ -282,8 +282,10 @@ class ContentModelArticles extends JModelList
 		else if (is_array($categoryId) && (count($categoryId) > 0)) {
 			JArrayHelper::toInteger($categoryId);
 			$categoryId = implode(',', $categoryId);
-			$type = $this->getState('filter.category_id.include', true) ? 'IN' : 'NOT IN';
-			$query->where('a.catid '.$type.' ('.$categoryId.')');
+			if (!empty($categoryId)) {
+				$type = $this->getState('filter.category_id.include', true) ? 'IN' : 'NOT IN';
+				$query->where('a.catid '.$type.' ('.$categoryId.')');
+			}
 		}
 
 		// Filter by author
