@@ -28,7 +28,8 @@ MOD_ARTICLES_CATEGORY_FIELD_CATFILTERINGTYPE_DESC="Select Inclusive to Include t
 MOD_ARTICLES_CATEGORY_FIELD_CATFILTERINGTYPE_LABEL="Category Filtering Type"
 MOD_ARTICLES_CATEGORY_FIELD_COUNT_DESC="The number of items to display. The default value of 0 will display all articles."
 MOD_ARTICLES_CATEGORY_FIELD_COUNT_LABEL="Count"
-MOD_ARTICLES_CATEGORY_FIELD_DATEFIELD_DESC="Select which date field you want the date range to be applied to."
+MOD_ARTICLES_CATEGORY_FIELD_DATERANGEFIELD_DESC="Select which date field you want the date range to be applied to."
+MOD_ARTICLES_CATEGORY_FIELD_DATERANGEFIELD_LABEL="Date Range Field"
 MOD_ARTICLES_CATEGORY_FIELD_DATEFIELD_DESC="Select which date field you want to display."
 MOD_ARTICLES_CATEGORY_FIELD_DATEFIELD_LABEL="Date Field"
 MOD_ARTICLES_CATEGORY_FIELD_DATEFIELDFORMAT_DESC="Please enter in a valid date format. See: http://php.net/date for formatting information."
@@ -46,7 +47,7 @@ MOD_ARTICLES_CATEGORY_FIELD_GROUP_GROUPING_LABEL="Grouping Options"
 MOD_ARTICLES_CATEGORY_FIELD_GROUP_ORDERING_LABEL="Ordering Options"
 MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_DESC="Please enter in a numeric character limit value. The introtext will be trimmed to the number of characters you enter."
 MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_LABEL="Introtext Limit"
-MOD_ARTICLES_CATEGORY_FIELD_MODE_DESC="Please select the mode you would like to use."
+MOD_ARTICLES_CATEGORY_FIELD_MODE_DESC="Please select the mode you would like to use. If Normal Mode is chosen, then simply configure the module and it will display a static list of Articles on the menu items you assign the module to. If Dynamic Mode is chosen, then you can still configure the module normally, however now the Category option will no longer be used. Instead, the module will dynamically detect whether or not you are on a Category view and will display the list of articles within that Category accordingly. When Dynamic Mode is chosen, it is best to leave the module set to display on all pages, as it will decide whether or not to display anything dynamically."
 MOD_ARTICLES_CATEGORY_FIELD_MODE_LABEL="Mode"
 MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_DESC="Please enter in a valid date format. See: http://php.net/date for formatting information."
 MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_LABEL="Month and Year Display Format"
@@ -68,7 +69,7 @@ MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_LABEL="Show on Article Page"
 MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_DESC="If Date Range is selected above, please enter a Starting Date."
 MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_LABEL="Start Date Range"
 MOD_ARTICLES_CATEGORY_OPTION_ASCENDING_VALUE="Ascending"
-MOD_ARTICLES_CATEGORY_OPTION_CREATED_VALUE="Created"
+MOD_ARTICLES_CATEGORY_OPTION_CREATED_VALUE="Created Date"
 MOD_ARTICLES_CATEGORY_OPTION_DATERANGE_VALUE="Date Range"
 MOD_ARTICLES_CATEGORY_OPTION_DESCENDING_VALUE="Descending"
 MOD_ARTICLES_CATEGORY_OPTION_DYNAMIC_VALUE="Dynamic"
@@ -78,14 +79,15 @@ MOD_ARTICLES_CATEGORY_OPTION_HITS_VALUE="Hits"
 MOD_ARTICLES_CATEGORY_OPTION_ID_VALUE="ID"
 MOD_ARTICLES_CATEGORY_OPTION_INCLUDE_VALUE="Include"
 MOD_ARTICLES_CATEGORY_OPTION_INCLUSIVE_VALUE="Inclusive"
-MOD_ARTICLES_CATEGORY_OPTION_MODIFIED_VALUE="Modified"
+MOD_ARTICLES_CATEGORY_OPTION_MODIFIED_VALUE="Modified Date"
 MOD_ARTICLES_CATEGORY_OPTION_MONTHYEAR_VALUE="Month and Year"
 MOD_ARTICLES_CATEGORY_OPTION_NORMAL_VALUE="Normal"
 MOD_ARTICLES_CATEGORY_OPTION_OFF_VALUE="Off"
 MOD_ARTICLES_CATEGORY_OPTION_ONLYFEATURED_VALUE="Only"
 MOD_ARTICLES_CATEGORY_OPTION_ORDERING_VALUE="Joomla! Ordering"
 MOD_ARTICLES_CATEGORY_OPTION_RELATIVEDAY_VALUE="Relative Date"
-MOD_ARTICLES_CATEGORY_OPTION_STARTPUBLISHING_VALUE="Start Publishing"
+MOD_ARTICLES_CATEGORY_OPTION_STARTPUBLISHING_VALUE="Start Publishing Date"
+MOD_ARTICLES_CATEGORY_OPTION_FINISHPUBLISHING_VALUE="Finish Publishing Date"
 MOD_ARTICLES_CATEGORY_OPTION_YEAR_VALUE="Year"
 MOD_ARTICLES_CATEGORY_TITLE_HEADING="Heading Level"
 MOD_ARTICLES_CATEGORY_TITLE_HEADING_DESCRIPTION="Select the desired HTML tag for the article titles."
